# pytorch-learnings

./: Makefile  README.md  pyproject.toml
src/: autograd.py  autograd_training.py  build_vocab.py  datasets_example.py  fashion-mnist.py  multi-head-attention.py  pytorch-hello.py  sentence_tokenization.py  transformer.py  transformer2.py  transformer_run.py  transformer_run2.py  transformer_trainer.py  transformer_trainer2.py  word_embedding.py  word_embedding2.py  word_embedding_nearest.py
src/transformer/: model.py  parameters.py  trainer_manager.py  utils.py
src/transformer2/: model-2.py  model.py  parameters.py  translate.py
src/utils/: __init__.py  data_loader.py  trainer_manager.py  transformer.py
stubs/: imgcat.py  imgcat.pyi  mlflow.pyi  sentencepiece.pyi
stubs/torchvision/: __init__.pyi  transforms.pyi
tests/: test_einstein_summation.py  test_pytorch_basics.py
