[tool.poetry]
name = "pytorch-learning"
version = "0.1.0"
description = ""
authors = ["Greg Tatum <tatum.creative@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
matplotlib = "^3.7.1"
imgcat = "^0.5.0"
datasets = "^2.14.3"
sentencepiece = "^0.1.99"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
