# Global mypy options:
[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
disallow_untyped_defs = true

# Per-module mypy configs:
[[tool.mypy.overrides]]
module = 'datasets'
ignore_missing_imports = true

# Poetry:

[tool.poetry]
name = "pytorch-learning"
version = "0.1.0"
description = ""
authors = ["Greg Tatum <tatum.creative@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
matplotlib = "^3.7.1"
imgcat = "^0.5.0"
datasets = "^2.14.3"
sentencepiece = "^0.1.99"
mlflow = "^2.6.0"
typed-argument-parser = "^1.8.1"
torchvision = "^0.16.0"
torchtext = "^0.16.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.4.0"
data-science-types = "^0.2.23" # Types for matlibplot and numpy.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
